<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <ImageView
        android:id="@+id/registerLogo"
        android:layout_width="406dp"
        android:layout_height="179dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:background="@color/backgroundlight"
        android:id="@+id/linearLayout"
        android:layout_width="392dp"
        android:layout_height="421dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingTop="40dp"
        android:paddingBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerLogo">

        <EditText
            android:id="@+id/registerEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="15dp"
            android:autofillHints="emailAddress"
            android:drawableLeft="@drawable/koperta"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/registerPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints="password"
            android:drawableLeft="@drawable/klodka"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <EditText
            android:id="@+id/registerConfPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="15dp"
            android:autofillHints="password"
            android:drawableLeft="@drawable/klodka"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/RepeatPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColorHint="@color/black" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@color/green2"
            android:text="@string/Register"
            app:backgroundTint="@color/green2" />

        <TextView
            android:id="@+id/tvRedirectRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:text="@string/Maszkonto"
            android:textColor="@color/red"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>