<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ProfileFragmentPage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <RelativeLayout
        android:id="@+id/relativeProfile"
        android:layout_width="match_parent"
        android:layout_height="272dp"
        android:layout_margin="8dp"
        android:background="@color/backgroundlight">

        <ImageView
            android:id="@+id/profileImage"
            android:src="@drawable/profile"
            android:layout_width="179dp"
            android:layout_height="179dp"
            android:layout_margin="4dp"
            android:contentDescription="@string/PHOTO" />

        <LinearLayout
            android:id="@+id/daneUser"
            android:layout_width="157dp"
            android:layout_height="192dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="48dp"
            android:layout_toEndOf="@+id/profileImage"
            android:layout_toRightOf="@+id/profileImage"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewImieUser"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/Imie"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/imieUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:gravity="left"
                android:hint="@string/Imie"
                android:textColorHint="@color/backgroundlight"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/textViewNazwiskoUser"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:text="@string/Nazwisko"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/nazwiskoUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="emailAddress"
                android:gravity="left"
                android:hint="@string/Nazwisko"
                android:textColorHint="@color/backgroundlight"
                android:textSize="12dp" />

            <Button
                android:id="@+id/updateUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@color/green2"
                android:text="@string/Save"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/textViewEmailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profileImage"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="8dp"
            android:text="@string/Email"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/emailUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewEmailUser"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="5dp"
            android:autofillHints="emailAddress"
            android:gravity="left"
            android:hint="@string/Email"
            android:textColorHint="@color/backgroundlight"
            android:textSize="15dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/favWheel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeProfile"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="290dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/wybraneFelgiProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Wybrane"
            android:textColor="@color/black"
            android:textSize="20sp"

            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewFavWheel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/list_row" />
    </LinearLayout>
</FrameLayout>