<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/backgroundlight">

        <ImageView
            android:id="@+id/imageWheel"
            android:layout_width="115dp"
            android:layout_height="143dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginRight="4dp"
            android:contentDescription="@string/PHOTO"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/item_b" />

        <LinearLayout
            android:id="@+id/linearLayoutView"
            android:layout_width="110dp"
            android:layout_height="142dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/linearLayoutList"
            app:layout_constraintStart_toEndOf="@+id/imageWheel"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/producentView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="end"
                android:text="@string/Producent"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/etView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/ET"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/rozstawView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/Rozstaw"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/rozmiarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/Rozmiar"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/cenaView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:gravity="end"
                android:text="@string/Cena"
                android:textColor="@color/red"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutList"
            android:layout_width="115dp"
            android:layout_height="143dp"
            android:layout_marginTop="3dp"
            android:layout_marginBottom="3dp"
            android:layout_marginStart="3dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/producentList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:text="@string/Producent"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageWheel"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/etList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/ET"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageWheel"
                app:layout_constraintTop_toBottomOf="@+id/producentList" />

            <TextView
                android:id="@+id/rozstawList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Rozstaw"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageWheel"
                app:layout_constraintTop_toBottomOf="@+id/etList" />

            <TextView
                android:id="@+id/rozmiarList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/Rozmiar"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/imageWheel"
                app:layout_constraintTop_toBottomOf="@+id/rozstawList" />

            <TextView
                android:id="@+id/cenaList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="3dp"
                android:text="@string/Cena"
                android:textColor="#FB0000"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/imageWheel"
                app:layout_constraintTop_toBottomOf="@+id/rozmiarList" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>